--- a/index.html
+++ b/index.html
@@ -6,36 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>City Rentals</title>
     <link rel="shortcut icon" href="img/favicon-32x32.png" type="image/x-icon">
+    
+    <!-- <link rel="stylesheet" href="css/responsive.css"> -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
     <div class="container">
-        <div class="sedan">
+        <div class="sedan inner">
             <img src="img/icon-sedans.svg" alt="sedan icon">
-            <h1 class="sedan-title">Sedan</h1>
-            <p class="vehicle-text">
+            <h1 class="car-title">Sedans</h1>
+            <p class="car-text">
                 Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.
             </p>
-            <a href="#" class="learn-more">Learn More</a>
+            <a href="#" class="learn-more btn-sedan">Learn More</a>
         </div>
 
-        <div class="suvs">
+        <div class="suvs inner">
             <img src="img/icon-suvs.svg" alt="suvs icon">
-            <h1 class="suvs-title">Suvs</h1>
-            <p class="vehicle-text">
+            <h1 class="car-title">Suvs</h1>
+            <p class="car-text">
                 Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.
             </p>
-            <a href="#" class="learn-more">Learn More</a>
+            <a href="#" class="learn-more btn-suv">Learn More</a>
         </div>
 
-        <div class="luxury">
+        <div class="luxury inner">
             <img src="img/icon-luxury.svg" alt="luxury car icon">
-            <h1 class="luxury-title">Luxury</h1>
-            <p class="vehicle-text">
+            <h1 class="car-title">Luxury</h1>
+            <p class="car-text">
                 Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.
             </p>
-            <a href="#" class="learn-more">Learn More</a>
+            <a href="#" class="learn-more btn-luxury">Learn More</a>
         </div>
         
     </div>
